--- a/package.json
+++ b/package.json
@@ -17,6 +17,14 @@
     "next": "13.0.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "rehype": "^12.0.1",
+    "rehype-rewrite": "^3.0.6",
+    "swr": "^1.3.0",
     "typescript": "4.9.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.19",
+    "tailwindcss": "^3.2.4"
   }
 }
